# ComfyUI_PromptManager

./: .coveragerc  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  SECURITY.md  __init__.py  debug_metadata.py  loggers.py  main.py  prompt_manager.py  prompt_manager_base.py  prompt_manager_detailer.py  prompt_manager_negative.py  prompt_manager_negative_text.py  prompt_manager_positive.py  prompt_manager_positive_text.py  prompt_manager_shared.py  prompt_manager_text.py  prompt_manager_tracked.py  prompt_manager_v2.py  prompt_manager_v2_text.py  prompt_search_list.py  prompts.db  pyproject.toml  pytest.ini  requirements-dev.txt  restart_gallery.py  tailwind.config.js  test_metadata_parsing.html  web_routes.py
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: code-quality.yml  publish.yml  test.yml
api/: gallery_endpoints.py
database/: __init__.py  models.py  operations.py
docs/: LOGGING_FIX_2025_10_15.md  TESTING.md
py/: __init__.py  api.py  autotag.py  config.py  lora_utils.py
py/api/: __init__.py  admin.py  autotag_routes.py  images.py  logging_routes.py  lora_integration.py  prompts.py
scripts/: enable_wal_mode.py  generate_icons.py  generate_thumbnails.py  generate_thumbnails_standalone.py  run_tests.py  run_tests.sh  test_runner.py  validate_data_capture.py
src/: __init__.py  app.py  comfyui_integration.py  config.py  database.py
src/api/: __init__.py  base_controller.py  client.py  comfyui_integration.py  consolidated_api.py  documentation.py  exceptions.py  middleware.py  openapi.py  openapi_spec.py  realtime_events.py  routes.py  routes_analysis.md  websocket.py
src/components/: base_gallery.py  image_gallery.py  prompt_gallery.py  unified_gallery.py
src/core/: __init__.py  base.py  base_repository.py  base_service.py  database.py  logging_control.py  sorting.py  validators.py
src/database/: __init__.py  connection_helper.py  gallery_operations.py  manager.py  migration.py  models.py  operations.py
src/galleries/: __init__.py  image_gallery.py
src/metadata/: __init__.py  comfy_parser.py  extractor.py
src/repositories/: generated_image_repository.py  image_repository.py  prompt_repository.py
src/services/: __init__.py  background_scheduler.py  comfyui_monitor.py  comfyui_node_registry.py  enhanced_thumbnail_service.py  epic_stats_calculator.py  hybrid_stats_service.py  image_scanner.py  image_service.py  incremental_stats_service.py  maintenance_service.py  migration_service.py  missing_images_tagger.py  pending_prompt_cleanup_scheduler.py  prompt_acceptance_service.py  prompt_service.py  settings_service.py  stats_cache.py  stats_cache_service.py  stats_event_handler.py  stats_service.py  stats_service_optimized.py  tag_service.py  thumbnail_reconciliation_service.py  word_cloud_service.py  workflow_metadata_extractor.py
src/tracking/: __init__.py  graph_analyzer.py  pending_registry.py  prompt_tracker.py  save_image_patcher.py  singleton_tracker.py
src/ui/: __init__.py  components.py  theme.py
src/utils/: __init__.py  ffmpeg_finder.py  file_metadata.py  file_operations.py  file_system.py  template_processor.py
tests/: README.md  __init__.py  conftest.py  test_api.py  test_basic.py  test_config.py  test_database.py  test_db_path_config.py  test_diagnostics_config.py  test_empty_text_handling.py  test_hashing.py  test_image_monitor_singleton.py  test_lora_database.py  test_lora_utils.py  test_metadata_extraction.py  test_node_execution_contract.py  test_output_dir.py  test_path_security.py  test_prompt_tracker.py  test_search_filters.py  test_validators.py
tests/integration/: test_api_endpoints.py  test_filesystem_operations.py  test_image_security_integration.py  test_stats_integration.py  test_tag_endpoints.py  test_thumbnail_size_settings.py  test_websocket.py
tests/performance/: test_concurrent_database.py  test_stats_performance.py
tests/unit/: test_comfyui_utils.py  test_database_models.py  test_file_operations.py  test_repositories.py  test_services.py  test_tag_service.py  test_thumbnail_api.py
utils/: __init__.py  cache.py  comfyui_integration.py  comfyui_utils.py  diagnostics.py  duplicate_detector.py  file_ops.py  file_system.py  hashing.py  image_monitor.py  image_processing.py  logging.py  logging_config.py  metadata_extractor.py  performance.py  platform_symbols.py  prompt_tracker.py  settings.py  validators.py
utils/core/: file_system.py  logging_config.py
utils/diagnostics/: diagnostics.py
utils/processing/: cache.py  image_processing.py  performance.py
utils/validation/: file_ops.py  hashing.py  validators.py
web/: admin.html  collections.html  comfyui-pm-button.js  comfyui-pm-extension.js  dashboard.html  gallery.html  index.html  logs.html  maintenance.html  manifest.json  metadata.html  prompt_manager.js  settings.html  stats.html  sw.js  template.html  unified-gallery.html
web/css/: base.css  blue-theme-update.css  collections.css  comfyui-sender.css  components.css  dashboard.css  example.css  gallery.css  index.css  layout.css  logs.css  maintenance-modal.css  metadata.css  migration.css  notifications.css  professional-dark.css  progress-modal.css  prompt-card-update.css  prompt_manager.css  responsive.css  scan-modal.css  settings.css  stats-hero.css  stats.css  style.css  theme.css  thumbnail-rebuild-modal-v2.css  thumbnail-rebuild-modal.css
web/html/: stats-hero-improved.html
web/js/: admin.js  app.js  cache-buster-inline.js  cache-buster.js  dashboard-page.js  gallery-dynamic.js  gallery-page.js  gallery.js  index-loader-instant.js  index-loader-optimized.js  index-loader.js  logs-page.js  notifications.js  (+11 more)
(+79 files in other folders)
